--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
   "installCommand": "cd frontend && npm ci",
   "env": { "VITE_API_URL": "" },
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/:path*" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!api/).*)", "destination": "/index.html" }
   ]
 }
